# rust-std-ext

./: Cargo.toml  LICENSE-APACHE  README.md
src/: compile_warning.rs  lib.rs  option.rs  result.rs  time.rs  tuple.rs  tuple_long_impl.rs  tuple_short_impl.rs  unwrap.rs  vec.rs
tests/: test_duration.rs  test_tuple.rs
