[package]
name = "rs-std-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.2", optional = true }
paste = "1.0.14"

[features]
default = ["crate-num"]
crate-num = ["num"] # enable the `num` crate
long-tuple-impl = [] # enable implementation for tuple longer than 5
