[package]
edition = "2021"

name = "rs-std-ext"
version = "0.1.0"

description = "An extension for the standard library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Embers-of-the-Fire/rust-std-ext.git"
homepage = "https://github.com/Embers-of-the-Fire/rust-std-ext"

authors = ["Embers-of-the-Fire <stellarishs@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.2", optional = true }
paste = "1.0.14"

[features]
default = ["crate-num"]
crate-num = ["num"] # enable the `num` crate
long-tuple-impl = [] # enable implementation for tuple longer than 5
